tests/e2e/pass/m36_shift_count_large.ep
# EXIT: 1
fun main(): void {
    let value = 1 >> 64
    os.ExitProcess(value)
}
